# algorithm-nexus

./: .copywrite.hcl  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .required-ci-checks.json  .secrets.baseline  .yamlfmt  404.html  CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  index.html  mendUnifiedAgent.config  pyproject.toml  requirements-candidate.txt  requirements-ecosystem.txt  requirements-product.txt  requirements.txt  ruff.toml  search.json  tombi.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: new_nexus_package.md
contributing/: index.html
contributing/add_benchmark/: index.html
contributing/add_new_nexus_package/: index.html
contributing/guidelines/: index.html
contributing/owner_responsibilities/: index.html
design/: index.html
design/benchmark_integration_design/: index.html
design/benchmark_metadata_convention/: index.html
design/benchmark_system/: index.html
design/dependency-resolution/: index.html
design/nexus_package/: index.html
design/project_release/: index.html
docs/contributing/: add_benchmark.md  add_new_nexus_package.md  nexus_package.md  owner_responsibilities.md
docs/design/: benchmark_integration_design.md  benchmark_metadata_convention.md  benchmark_system.md  dependency-resolution.md  nexus_package.md  project_release.md
docs/getting-started/: cli-reference.md
docs/requirements/: benchmark.md  dependency-resolution.md  model_vllm.md  models_testing.md  nexus_package.md  packaging_and_dependency_reqs.md
getting-started/: index.html
getting-started/cli-reference/: index.html
getting-started/installation/: index.html
requirements/: index.html
requirements/benchmark/: index.html
requirements/model_vllm/: index.html
requirements/models_testing/: index.html
stylesheets/: extra.css
tests/: __init__.py  test_cli_run.py  test_cli_validation.py  test_models.py  test_validate_benchmarks.py  test_validate_logical_benchmarks.py
website/: zensical.toml
(+40 files in other folders)
