[project]
name = "algorithm-nexus"
version = "0.1.0"
description = "A comprehensive library for AI model delivery, testing, and benchmarking"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license-files = ["LICENSE"]
authors = [{ name = "Christian Pinto", email = "christian.pinto@ibm.com" }]
maintainers = [{ name = "Christian Pinto", email = "christian.pinto@ibm.com" }]

[project.urls]
Homepage = "https://github.com/IBM/algorithm-nexus"
Issues = "https://github.com/IBM/algorithm-nexus/issues"
Repository = "https://github.com/IBM/algorithm-nexus"

[project.scripts]
nexus = "algorithm_nexus.cli:main"

[project.optional-dependencies]
candidate = [
  "vllm==0.19.1",
]
cli = [
  "pydantic>=2.13.3",
  "pyyaml>=6.0.3",
  "rich>=15.0.0",
  "typer>=0.25.0",
]
product = [
  "vllm==0.18.0",
]

[dependency-groups]
dev = [
  "black>=25.1.0",
  "codespell>=2.4.0",
  "detect-secrets @ git+https://github.com/ibm/detect-secrets.git",
  "pre-commit>=4.2.0",
  "ruff>=0.12.0",
]
test = [
  "pytest>=9.0.3",
]

[tool.uv]
package = true
conflicts = [
  [
    { extra = "ecosystem" },
    { extra = "candidate" },
    { extra = "product" },
  ],
]
